--- a/12-kuber-homeworks-3.3/deploy/NetworkPolicy.yaml
+++ b/12-kuber-homeworks-3.3/deploy/NetworkPolicy.yaml
@@ -2,16 +2,19 @@ apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
   name: allow-frontend-backend-cache
-  namespace: App
+  namespace: app
 spec:
   podSelector:
     matchLabels:
       app: frontend
+  policyTypes:
+    - Ingress
   ingress:
     - from:
         - podSelector:
             matchLabels:
               app: backend
+    - from:
         - podSelector:
             matchLabels:
               app: cache
