--- a/12-kuber-homeworks-3.3/deploy/cache.yaml
+++ b/12-kuber-homeworks-3.3/deploy/cache.yaml
@@ -2,9 +2,9 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: cache
-  namespace: App
+  namespace: app
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
       app: cache
