--- a/12-kuber-homeworks-3.3/deploy/serviceback.yaml
+++ b/12-kuber-homeworks-3.3/deploy/serviceback.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: backend
-  namespace: App
+  name: backend-svc
+  namespace: app
 spec:
   selector:
     app: backend
