--- a/12-kuber-homeworks-3.3/deploy/servicecache.yaml
+++ b/12-kuber-homeworks-3.3/deploy/servicecache.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: cache
-  namespace: App
+  name: cache-svc
+  namespace: app
 spec:
   selector:
     app: cache
