--- a/12-kuber-homeworks-3.3/deploy/servicefront.yaml
+++ b/12-kuber-homeworks-3.3/deploy/servicefront.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: frontend
-  namespace: App
+  name: frontend-svc
+  namespace: app
 spec:
   selector:
     app: frontend
